--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-04-16 10:49:39 -0400 
+%% Created for Sean Bittner at 2021-04-16 13:47:31 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sanzeni2020inhibition,
+	author = {Sanzeni, Alessandro and Akitake, Bradley and Goldbach, Hannah C and Leedy, Caitlin E and Brunel, Nicolas and Histed, Mark H},
+	date-added = {2021-04-16 13:47:26 -0400},
+	date-modified = {2021-04-16 13:47:26 -0400},
+	journal = {Elife},
+	pages = {e54875},
+	publisher = {eLife Sciences Publications Limited},
+	title = {Inhibition stabilization is a widespread property of cortical networks},
+	volume = {9},
+	year = {2020}}
 
 @book{marder1992dynamic,
 	author = {Marder, Eve and Selverston, Allen I},
